2014-09-28 Bjoern Bornkamp (version 0.9-12)
      * glycobrom dataset: Included column for number of observations
	per treatment.
      * calcCrit now takes into account "nold" in determining whether
	enough design points were specified to be able to calculate
	the design criteria.
      * bFitMod documentation for plot.bFitMod and predict.bFitMod
	methods added. coef.bFitMod method added. Thanks to Lieven Nils
	Kennes for pointing towards the issue.

2014-02-11 Bjoern Bornkamp (version 0.9-11)
      * Mods Introduce fullMod argument to allow specification
	of full model parameters (again).
      * calcTDgrad now calculates the analytical gradient for TD
	optimal designs for the beta model. The previous numerical
	gradient could get unstable for particular parameter values.
	Thanks to Tobias Mielke for the calculations!
      * planMod.Rd, powMCT.Rd More description on what "sigma" is
      * optDesign, optContr Catch Mods objects with multiple direction
	attributes properly in these functions.	

2013-11-25 Bjoern Bornkamp (version 0.9-10)
      * plot.MCPMod In case of no significant model, do not plot anything.
      * optContr Bugfix in function constOptC, previous algorithm selected
	in some situation an incorrect active set (and hence a suboptimal
	solution), the current implementation uses quadratic programming
	(hence the new suggested package quadprog).

2013-10-15 Bjoern Bornkamp (version 0.9-9)
      * bFitMod.Bayes Stop if starting values lie outside of bounds
	specified for the prior distribution
      * predict.bFitMod Remove incorrect "if" statement (use
	"effect-curve" not "EffectCurve")
      * fitModels.bndnls now uses narrowed bounds for 1d models again
	(as in 0.9-5 and earlier), thanks to Tobias Mielke for reporting
	the three points above.
      * optContr now allows for constrained contrasts, i.e. where the
	contrast coefficients in placebo and active treatment groups are
	required to have different signs.
