@@ -1,8 +1,8 @@
 Package: DoseFinding
 Type: Package
-Title: Planning and Analyzing Dose Finding experiments
-Version: 0.9-12
-Date: 2014-09-28
+Title: Planning and Analyzing Dose Finding Experiments
+Version: 0.9-13
+Date: 2015-11-09
 Author: Bjoern Bornkamp, Jose Pinheiro, Frank Bretz
 Depends: lattice, mvtnorm, R (>= 2.15.0)
 Suggests: numDeriv, Rsolnp, quadprog, parallel, multcomp
